# c_on_travis

./: .tavis.yml  .travis.yml  Makefile.am  README.md  configure.ac
lib/src/: Makefile.am  tkutil.c  tkutil.h
src/: Makefile.am  main  main.c
test/: Makefile.am  check_tkutil  check_tkutil.c
